# xray-classification

./: .gitignore  README.md  STRATEGY.md  check-progress.sh  cv2.py  data.py  evaluate.py  fl_checkpoints.py  local_train.py  model.py  pyproject.toml  requirements.txt  submit-auto-continue.sh  submit-job.sh  submit-sequential.sh
berlin25_xray/: README.md  __init__.py  augmentation.py  client_app.py  fedbn.py  improved_model.py  improved_task.py  logging_utils.py  pyproject.toml  sampling_strategies.py  server_app.py  task.py  training_utils.py  util.py
berlin25_xray/cold_start_hackathon/: server_app.py  task.py
cold_start_hackathon/: task.py
coldstart/: README.md  pyproject.toml
scripts/: evaluate.py  local_train.py  prepare_datasets.py  preprocess_datasets.py
