# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "berlin25-xray"
version = "1.0.0"
description = ""
license = "Apache-2.0"
requires-python = ">=3.9,<3.13"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "ray>=2.0.0",
    "torch",
    "torchvision",
    "datasets",
    "scipy",
    "scikit-learn",
    "wandb",

    # Analysis and visualization
    "jupyterlab",
    "marimo",
    "pandas",
    "matplotlib",
    "seaborn",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "hackathon"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "berlin25_xray.server_app:app"
clientapp = "berlin25_xray.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
image-size = 224        # Higher resolution for more detailed features
batch-size = 512        # Smaller batch to avoid OOM at 224px
num-server-rounds = 2   # Fewer rounds to stay within time budget
local-epochs = 3        # Keep local epochs modest
lr = 0.0003             # Head LR; backbone scaled by VIT_BACKBONE_LR_SCALE
compile-model = true    # Enable torch.compile for fused ViT execution

# Default federation to use when running the app
[tool.flwr.federations]
default = "cluster"

# Local simulation federation with 3 virtual SuperNodes (one per hospital)
[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true

[tool.flwr.federations.cluster]
# Cluster deployment with 3 supernodes (one per hospital)
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 0.33
