# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "berlin25-xray"
version = "1.0.0"
description = "Binary chest X-Ray classification using Flower"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "ray>=2.0.0",
    "torch",
    "torchvision",
    "datasets",
    "scipy",
    "scikit-learn",
    "transformers",
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "hackathon"

[tool.flwr.app.components]
serverapp = "berlin25_xray.server_app:app"
clientapp = "berlin25_xray.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
batch-size = 32
image-size = 224
num-server-rounds = 10
local-epochs = 2
lr = 0.001

# Default federation to use when running the app
[tool.flwr.federations]
default = "cluster"

# Local simulation federation with 3 virtual SuperNodes (one per hospital)
[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true

[tool.flwr.federations.cluster]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 0.33
